...
                      horizontal: 0.175 * MediaQuery.of(context).size.width),
                  children: [
                    const Icon(Icons.account_circle,
                        size: 90, color: Colors.black54),
                    const InputFieldSpacer(),
                    TextFormField(
                        key: const Key('inputName'),
                        textCapitalization: TextCapitalization.words,
                        validator: (input) => validateName(input!.trim()),
                        onSaved: (input) => _name = input!.trim(),
                        onChanged: _onFieldChange,
                        textInputAction: TextInputAction.go,
                        onFieldSubmitted: (value) => _createUser(),
...
